Adicionei um parágrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem mollitia labore eius iste, esse unde recusandae facere nostrum neque distinctio sint quia repudiandae quis. At delectus aliquam saepe accusamus! Incidunt.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex iure vitae aspernatur dolores fugit velit minus repellat tempore! Suscipit blanditiis voluptas fuga reprehenderit ut eos sequi nemo ipsam molestias possimus.</p>
 </body>
 </html>
